crates/serde-feather/tests/ui/enum_type.stderr
error: unsupported serde container attribute; supported attributes: `rename`, `rename_all`
 --> tests/ui/enum_type.rs:4:9
  |
4 | #[serde(tag = "type")]
  |         ^^^
